@@ -19,11 +19,11 @@
 /*===========================================================================
  * SVN properties (DO NOT CHANGE)
  *
- * $Id:$ 
- * $HeadURL:$
- * $LastChangedRevision:$ 
- * $Author:$
- * $LastChangedDate:$
+ * $Id$ 
+ * $HeadURL$
+ * $LastChangedRevision$ 
+ * $Author$
+ * $LastChangedDate$
  *
  *==========================================================================*/
 
@@ -42,7 +42,6 @@ int Mk5Daemon_getStreamstorVersions(Mk5Daemon *D)
 	S_DEVINFO devInfo;
 	S_DBINFO dbInfo;
 	SSHANDLE xlrDevice;
-	S_BANKSTATUS bank_stat;
 	XLR_RETURN_CODE xlrRC;
 	unsigned int xlrError;
 	char message[120+(XLR_ERROR_LENGTH)];
